Add styling for transports section + links for tourism section

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 <div class="ww-section bg-light" id="tourism-details">
     <div class="ww-tourism">
       <div class="container">
-        <h2 class="h1 text-center pb-3 ww-title">Comment venir ?</h2>
+        <h2 class="h1 text-center pb-3 ww-title">Transports</h2>
         <div class="row how-to-come">
           <div class="col-md-4">
             <div class="tourism-icon">
@@ -329,7 +329,7 @@
             </p>   
           </div>
         </div>
-        <h2 class="h1 text-center pb-3 ww-title">Où dormir ?</h2>
+        <h2 class="h1 text-center pb-3 ww-title">Suggestion d'hébergements</h2>
         <div class="row justify-content-center where-to-sleep">
           <div class="col-md-4">
             <h2>Gites</h2>
@@ -362,15 +362,15 @@
               </ul>
           </div>
         </div>
-        <h2 class="h1 text-center pb-3 ww-title">Quoi visiter ?</h2>
+        <h2 class="h1 text-center pb-3 ww-title">Aux alentours</h2>
         <div class="row what-to-visit">
           <div class="col-md-3 visit-place">
-            <h3>La Rochelle</h3>
+            <h3><a href="https://www.larochelle-tourisme.com/">La Rochelle</a></h3>
             <span class="distance">(voiture: 50 min de Niort)</span>
             <p>Ma ville! Á ne pas manquer!</p>
           </div>  
           <div class="col-md-3 visit-place">
-            <h3>Île de Ré</h3>
+            <h3><a href="https://www.iledere.com/pratique">Île de Ré</a></h3>
             <span class="distance">(voiture: 1h10 de Niort)</span>
             <p>Balades
             Vélo
@@ -380,21 +380,21 @@
             </p>
           </div>
           <div class="col-md-3 visit-place">
-            <h3>Puy du Fou</h3>
+            <h3><a href="https://www.puydufou.com">Puy du Fou</a></h3>
             <span class="distance">(voiture: 1h20 de Niort)</span>
             <p>Parc d'attraction, spectacles
             À ne pas manquer!
             </p>
           </div>
           <div class="col-md-3 visit-place">
-            <h3>Futuroscope</h3>
+            <h3><a href="https://futuroscope.com/">Futuroscope</a></h3>
             <span class="distance">(voiture: 1h de Niort)</span>
             <p>Parc d'attraction
               À ne pas manquer!
             </p>
           </div>
           <div class="col-md-3 visit-place">
-            <h3>Le marais poitevin</h3>
+            <h3><a href="https://www.marais-poitevin.com/">Le marais poitevin</a></h3>
             <span class="distance">(voiture: 1h de Niort)</span>
             <p>Balades en barques
             Vélo
@@ -403,12 +403,12 @@
           </p>
           </div>
           <div class="col-md-3 visit-place">
-            <h3>Poitiers</h3>
+            <h3><a href="http://poitiers-tourism.com/">Poitiers</a></h3>
             <span class="distance">(voiture:1h de Niort)</span>
             <p>Ville Romane</p>
           </div>
           <div class="col-md-3 visit-place">  
-            <h3>Zoo de la Palmyre</h3>
+            <h3><a href="http://www.zoo-palmyre.fr/">Zoo de la Palmyre</a></h3>
             <span class="distance">(voiture: 1h30 min de Niort)</span>
             <p>Zoo - y passer la journée</p>
           </div>
