Updates on RSVP section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#timeline">Notre histoire</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#people">Nos témoins</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#tourism-details">Infos pratiques</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">Réponse</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">RSVP</a></li>
         </ul>
       </div>
     </div>
@@ -335,7 +335,7 @@
           <h2 class="h1 text-center pb-3 ww-title">Suggestion d'hébergements</h2>
           <div class="row justify-content-center where-to-sleep">
             <div class="col-md-4">
-              <h2>Gites</h2>
+              <h2>Gîtes</h2>
               <ul>
                 <li><a href="http://www.motteaubert.com/fr/gites/gites-3.html">La Motte Aubert</a></li>
                 <li><a href="https://www.lelogisdevallans.com/">Logis de Vallans</a></li>
@@ -346,7 +346,7 @@
               </ul>
             </div>
             <div class="col-md-4">
-                <h2>airBnBs</h2>
+                <h2>Airbnb</h2>
                 <ul>
                     <li><a href="https://www.airbnb.co.uk/rooms/7961355?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
                     <li><a href="https://www.airbnb.co.uk/rooms/13651697?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
@@ -425,7 +425,7 @@
 <div class="ww-section ww-rsvp-detail text-white" id="rsvp">
   <div class="container">
     <div class="col text-center">
-      <h2 class="h1 ww-title pb-3">Dites-nous que vous venez !</h2>
+      <h2 class="h1 ww-title pb-3">Votre réponse</h2>
     </div>
     <div class="row ww-rsvp-form">
       <div class="col-md-10">
@@ -454,7 +454,7 @@
               </div>
               <div class="col md-6 pb-3">
                 <div class="form-group">
-                  <label for="guest-input">Nombre d'enfants (< 18 ans) et âge*:</label>
+                  <label for="guest-input">Nombre d'enfants (< 18 ans) et âge*</label>
                   <input class="form-control" id="name-input" type="text" name="kid-info" required="required" placeholder="Example: 2 (6 et 8 ans)"/>
                 </div>
               </div>
@@ -462,11 +462,11 @@
             <div class="row">
               <div class="col-md-6 pb-3">
                 <div class="form-group">
-                  <label for="events-input">Présent à:</label>
+                  <label for="events-input">Présent à</label>
                   <select class="form-control" id="events-input" name="event-attendance">
-                    <option value="all-event">Mairie et réception</option>
-                    <option value="wedding-ceremony">Mairie</option>
-                    <option value="reception-party">Réception</option>
+                    <option value="townhall-only">Cérémonie civile uniquement</option>
+                    <option value="saturday">Toute la journée du samedi</option>
+                    <option value="saturday-and-sunday">Toute la journée du samedi et brunch du dimanche</option>
                   </select>
                 </div>
               </div>
@@ -474,7 +474,7 @@
             <div class="row">
               <div class="col">
                 <div class="form-group">
-                  <label for="message-input">Informations complémentaires (régime alimentaire particulier, questions sur l'événement, ...):</label>
+                  <label for="message-input">Informations complémentaires (régime alimentaire particulier, questions sur l'événement, ...)</label>
                   <textarea class="form-control" id="message-input" name="message" rows="4"></textarea>
                 </div>
               </div>
