Update the tourism area with imagess and better margin/padding

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="row text-center">
       <div class="col-md-6">
         <h1 class="h1 ww-title">Aurélie</h3>
-        <div class="mt-3"><img class="img-fluid" src="images/aurelie_main.jpg" alt="Bride"/>
+        <div class="mt-3"><img class="img-fluid featured" src="images/aurelie_main.jpg" alt="Bride"/>
           <p class="pt-3">
             L'aventurière du couple, Aurélie adore faire des rencontre insolites, que ce soit au milieu de la mangrove Thaïlandaise (rend moi mon appareil photo !), en haut des falaises de Moher (j'ai le vertige, je veux partir d'ici...) ou dans son appartement Londonien (une araignéeeeeee !!!!!).</p>
           <p>
@@ -78,7 +78,7 @@
       </div>
       <div class="col-md-6">
           <h1 class="h1 ww-title">Romain</h3>
-          <div class="mt-3"><img class="img-fluid" src="images/romain_main.jpg" alt="Groom"/>
+          <div class="mt-3"><img class="img-fluid featured" src="images/romain_main.jpg" alt="Groom"/>
             <p class="pt-3">
               Prêt à soulever des montagnes (dans ce cas précis, un bout de volcan) pour faire plaisir à sa fiancée, Romain a vécu des aventures
               inoubliables ces cinq dernières années auprès de sa dulcinée.</p>
@@ -114,7 +114,7 @@
         </div>
       </div>
       <div class="col-md-5 col-sm-12">
-        <div class="my-3"><img class="img-fluid" src="images/mairie_niort.jpg" alt="Mairie Niort"/></div>
+        <div class="my-3"><img class="img-fluid featured" src="images/mairie_niort.jpg" alt="Mairie Niort"/></div>
       </div>
     </div>
     <div class="row">
@@ -130,7 +130,7 @@
         </div>
       </div>
       <div class="col-md-5 col-sm-12">
-        <div class="my-3"><img class="img-fluid" src="images/la_gravette_grange.jpg" alt="Le domaine de la Gravette"/></div>
+        <div class="my-3"><img class="img-fluid featured" src="images/la_gravette_grange.jpg" alt="Le domaine de la Gravette"/></div>
       </div>
     </div>
     <div class="row">
@@ -145,7 +145,7 @@
         </div>
       </div>
       <div class="col-md-5 col-sm-12">
-        <div class="my-3"><img class="img-fluid" src="images/la_gravette_grange_jour.jpg" alt="Le domaine de la Gravette"/></div>
+        <div class="my-3"><img class="img-fluid featured" src="images/la_gravette_grange_jour.jpg" alt="Le domaine de la Gravette"/></div>
       </div>
     </div>
   </div>
@@ -371,13 +371,15 @@
           <div class="row what-to-visit">
             <div class="col-md-3 visit-place">
               <h3><a href="https://www.larochelle-tourisme.com/">La Rochelle</a></h3>
+              <img class="featured" src="images/tourisme_la_rochelle.jpg"/>
               <span class="distance">(voiture: 50 min de Niort)</span>
-              <p>Ma ville! Á ne pas manquer!</p>
+              <p class="first-line-description">Ma ville! Á ne pas manquer!</p>
             </div>  
             <div class="col-md-3 visit-place">
               <h3><a href="https://www.iledere.com/pratique">Île de Ré</a></h3>
+              <img class="featured" src="images/tourisme_ile_de_re.jpg"/>
               <span class="distance">(voiture: 1h10 de Niort)</span>
-              <p>Balades
+              <p class="first-line-description">Balades
               Vélo
               Nature
               Plage
@@ -386,22 +388,25 @@
             </div>
             <div class="col-md-3 visit-place">
               <h3><a href="https://www.puydufou.com">Puy du Fou</a></h3>
+              <img class="featured" src="images/tourisme_puy_du_fou.jpg"/>
               <span class="distance">(voiture: 1h20 de Niort)</span>
-              <p>Parc d'attraction, spectacles
+              <p class="first-line-description">Parc d'attraction, spectacles
               À ne pas manquer!
               </p>
             </div>
             <div class="col-md-3 visit-place">
               <h3><a href="https://futuroscope.com/">Futuroscope</a></h3>
+              <img class="featured" src="images/tourisme_futuroscope.jpg"/>
               <span class="distance">(voiture: 1h de Niort)</span>
-              <p>Parc d'attraction
+              <p class="first-line-description">Parc d'attraction
                 À ne pas manquer!
               </p>
             </div>
             <div class="col-md-3 visit-place">
               <h3><a href="https://www.marais-poitevin.com/">Le marais poitevin</a></h3>
+              <img class="featured" src="images/tourisme_marais_poitevin.jpg"/>
               <span class="distance">(voiture: 1h de Niort)</span>
-              <p>Balades en barques
+              <p class="first-line-description">Balades en barques
               Vélo
               Nature
               Randonnées
@@ -409,13 +414,15 @@
             </div>
             <div class="col-md-3 visit-place">
               <h3><a href="http://poitiers-tourism.com/">Poitiers</a></h3>
+              <img class="featured" src="images/tourisme_poitiers.jpg"/>
               <span class="distance">(voiture:1h de Niort)</span>
-              <p>Ville Romane</p>
+              <p class="first-line-description">Ville Romane</p>
             </div>
             <div class="col-md-3 visit-place">  
               <h3><a href="http://www.zoo-palmyre.fr/">Zoo de la Palmyre</a></h3>
+              <img class="featured" src="images/tourisme_zoo_palmyre.jpg"/>
               <span class="distance">(voiture: 1h30 min de Niort)</span>
-              <p>Zoo - y passer la journée</p>
+              <p class="first-line-description">Zoo - y passer la journée</p>
             </div>
           </div>
         </div>
