Update hosting area with Airbnb titles and update style

--- a/index.html
+++ b/index.html
@@ -348,20 +348,19 @@
             <div class="col-md-4">
                 <h2>Airbnb</h2>
                 <ul>
-                    <li><a href="https://www.airbnb.co.uk/rooms/7961355?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/13651697?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/17036112?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/3961259?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/16720190?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/23801154?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/22173624?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/26889328?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/15983471?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/20211696?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/9203375?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/11887668?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/9203373?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/20028548?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Airbnb link</a></li>
+                    <li><a href="https://www.airbnb.co.uk/rooms/7961355?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Chambres à la campagne (4 disponibles) avec lit 2P</a></li>
+                    <li><a href="https://www.airbnb.co.uk/rooms/13651697?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Maison à la campagne</a></li>
+                    <li><a href="https://www.airbnb.co.uk/rooms/17036112?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">La Cabane de Vendredi avec terrasse sur pilotis</a></li>
+                    <li><a href="https://www.airbnb.co.uk/rooms/3961259?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Gite les frênes, entre terre et mer</a></li>
+                    <li><a href="https://www.airbnb.co.uk/rooms/16720190?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Close house Niort swamp poitevin+piscine sud79</a></li>
+                    <li><a href="https://www.airbnb.co.uk/rooms/23801154?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Grande chambre (42m²) au vert</a></li>
+                    <li><a href="https://www.airbnb.co.uk/rooms/22173624?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Chambre tres calme</a></li>
+                    <li><a href="https://www.airbnb.co.uk/rooms/26889328?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Gîte proche de La Rochelle et du Marais Poitevin</a></li>
+                    <li><a href="https://www.airbnb.co.uk/rooms/15983471?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Maison de campagne et pizzeria au calme</a></li>
+                    <li><a href="https://www.airbnb.co.uk/rooms/20211696?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">La ferme de Contremarche</a></li>
+                    <li><a href="https://www.airbnb.co.uk/rooms/9203375?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Chambre 1 ..... salle d eau à l italienne</a></li>
+                    <li><a href="https://www.airbnb.co.uk/rooms/11887668?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Chambre 2 ...</a></li>
+                    <li><a href="https://www.airbnb.co.uk/rooms/20028548?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Calme champêtre</a></li>
                 </ul>
             </div>
           </div>
