--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <h1 class="h1 text-center pb-3 ww-title">Notre histoire</h1>
     <ul class="timeline animate-box">
       <li class="animate-box">
-        <div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
+        <div class="timeline-badge" style="background-image:url(images/gallery-pic-1.jpg);"></div>
         <div class="timeline-panel">
           <div class="timeline-heading">
             <h3 class="timeline-title">Nos débuts</h3>
@@ -167,7 +167,7 @@
         </div>
       </li>
       <li class="timeline-inverted animate-box">
-        <div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+        <div class="timeline-badge" style="background-image:url(images/gallery-pic-2.jpg);"></div>
         <div class="timeline-panel">
           <div class="timeline-heading">
             <h3 class="timeline-title">Emménagement</h3>
@@ -179,7 +179,7 @@
         </div>
       </li>
       <li class="animate-box">
-        <div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+        <div class="timeline-badge" style="background-image:url(images/gallery-pic-3.jpg);"></div>
         <div class="timeline-panel">
           <div class="timeline-heading">
             <h3 class="timeline-title">Départ pour notre vie en Angleterre</h3>
@@ -191,7 +191,7 @@
         </div>
       </li>
       <li class="timeline-inverted animate-box">
-        <div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+        <div class="timeline-badge" style="background-image:url(images/gallery-pic-4.jpg);"></div>
         <div class="timeline-panel">
           <div class="timeline-heading">
             <h3 class="timeline-title">Demande en mariage</h3>
@@ -203,7 +203,7 @@
         </div>
       </li>
       <li class="animate-box">
-        <div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+        <div class="timeline-badge" style="background-image:url(images/gallery-pic-5.jpg);"></div>
         <div class="timeline-panel">
           <div class="timeline-heading">
             <h3 class="timeline-title">Arrivée d'Alice</h3>
@@ -222,41 +222,85 @@
     <h2 class="h1 text-center pt-3 ww-title">Nos témoins</h2>
     <div class="row">
       <div class="col-md-3">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-1.jpg" alt="Groom Men 1"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-1.jpg" alt="Groom Men 1"/>
           <div class="card-body text-center">
-            <div class="h5">Bryan Berry</div>
-            <p class="mb-0 text-muted">Best Friend</p>
-            <p class="text-muted">Groomsmen</p>
+            <div class="h5">Charlotte Mager</div>
+            <p class="text-muted">Témoin de la mariée</p>
             <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
           </div>
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-2.jpg" alt="Groom Men 2"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-2.jpg" alt="Groom Men 2"/>
           <div class="card-body text-center">
-            <div class="h5 text-center">Kevin Johnston</div>
-            <p class="mb-0 text-muted">Room Mate</p>
-            <p class="text-muted">Groomsmen</p>
+            <div class="h5 text-center">Oriane Escobar</div>
+            <p class="text-muted">Témoin de la mariée</p>
             <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
           </div>
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-3.jpg" alt="Groom Men 3"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-1.jpg" alt="Groom Men 3"/>
           <div class="card-body text-center">
-            <div class="h5 text-center">Arthur Wright</div>
-            <p class="mb-0 text-muted">Friend</p>
-            <p class="text-muted">Groomsmen</p>
+            <div class="h5 text-center">Jérémie Pardou</div>
+            <p class="text-muted">Témoin du marié</p>
             <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
           </div>
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-3.jpg" alt="Groom Men 3"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-2.jpg" alt="Groom Men 3"/>
           <div class="card-body text-center">
-            <div class="h5 text-center">Arthur Wright</div>
-            <p class="mb-0 text-muted">Friend</p>
-            <p class="text-muted">Groomsmen</p>
+            <div class="h5 text-center">Guillaume Truilhé</div>
+            <p class="text-muted">Témoin du marié</p>
+            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <h2 class="h1 text-center pt-3 ww-title">Les demoiselles d'honneur</h2>
+    <div class="row">
+      <div class="col-md-2">
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-1.jpg" alt="Groom Men 1"/>
+          <div class="card-body text-center">
+            <div class="h5">Pauline Millet-Peyrat</div>
+            <p class="text-muted">Soeur de la mariée</p>
+            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-2.jpg" alt="Groom Men 2"/>
+          <div class="card-body text-center">
+            <div class="h5 text-center">Emeline Aupy</div>
+            <p class="text-muted">Soeur de la mariée</p>
+            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-3.jpg" alt="Groom Men 3"/>
+          <div class="card-body text-center">
+            <div class="h5 text-center">Chloé Nunez</div>
+            <p class="text-muted">Amie de la mariée</p>
+            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-2.jpg" alt="Groom Men 3"/>
+          <div class="card-body text-center">
+            <div class="h5 text-center">Virginie Travisan</div>
+            <p class="text-muted">Amie du marié</p>
+            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-1.jpg" alt="Groom Men 3"/>
+          <div class="card-body text-center">
+            <div class="h5 text-center">Coralie Truilhé</div>
+            <p class="text-muted">Amie du marié</p>
             <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
           </div>
         </div>
