Fix html div wrong enclosing + alternating bg color to highlight the section separations

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="ww-nav-bar sticky-top bg-blue">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <h1 class="h2"><a class="pl-4 navbar-brand" href="#">Aurélie & Romain - 27 juillet 2019</a></h1>
+      <h1 class="h2"><a class="navbar-brand" href="#">Aurélie & Romain - 27 juillet 2019</a></h1>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ww-navbarNav" aria-controls="ww-navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
         <ul class="navbar-nav ml-auto">
@@ -45,7 +45,7 @@
     </div>
   </nav>
 </div>
-<div class="ww-section  bg-light" id="introduction">
+<div class="ww-section bg-light" id="introduction">
   <div class="container">
     <div class="row">
       <div class="introduction-text col-md-6">
@@ -217,9 +217,9 @@
     </ul>
   </div>
 </div>
-<div class="ww-section" id="people">
+<div class="ww-section bg-blue" id="people">
   <div class="container ww-couple-friends">
-    <h2 class="h1 text-center pt-3 ww-title">Nos témoins</h2>
+    <h1 class="h1 text-center pt-3 ww-title">Nos témoins</h2>
     <div class="row">
       <div class="col-md-3">
         <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-1.jpg" alt="Groom Men 1"/>
@@ -258,7 +258,7 @@
         </div>
       </div>
     </div>
-    <h2 class="h1 text-center pt-3 ww-title">Les demoiselles d'honneur</h2>
+    <h1 class="h1 text-center pt-3 ww-title">Les demoiselles d'honneur</h2>
     <div class="row">
       <div class="col-md-2">
         <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-1.jpg" alt="Groom Men 1"/>
@@ -307,6 +307,7 @@
       </div>
     </div>
  </div>
+</div>
 <div class="ww-section bg-light" id="tourism-details">
     <div class="ww-tourism">
       <div class="container">
@@ -540,14 +541,16 @@
     </div>
   </div>
 </div>
-<div class="ww-footer bg-light">
-  <div class="container text-center py-4">
-    <p class="my-0">&copy; Aurélie & Romain. All rights reserved.</p>
-    <p class="mb-0">Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a></p>
-  </div>
-</div></div>
+</div>
+</div>
+  <footer>
+    <div class="ww-footer bg-light">
+      <div class="container text-center py-4">
+        <p class="my-0">&copy; Aurélie & Romain. All rights reserved.</p>
+        <p class="mb-0">Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a></p>
+      </div>
     </div>
-    <footer></footer>
+  </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
