--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="ww-nav-bar sticky-top bg-blue">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <h1 class="h2"><a class="navbar-brand" href="#">Aurélie & Romain - 27 juillet 2019</a></h1>
+      <span><a class="navbar-brand" href="#">Aurélie & Romain - 27 juillet 2019</a></span>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ww-navbarNav" aria-controls="ww-navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
         <ul class="navbar-nav ml-auto">
