Add extra padding in groomsmen / bridesmaids section

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 </div>
 <div class="ww-section bg-blue" id="people">
   <div class="container ww-couple-friends">
-    <h1 class="h1 text-center pt-3 ww-title">Nos témoins</h2>
+    <h1 class="h1 text-center pt-3 pb-3 ww-title">Nos témoins</h2>
     <div class="row">
       <div class="col-md-3">
         <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-1.jpg" alt="Groom Men 1"/>
@@ -258,7 +258,7 @@
         </div>
       </div>
     </div>
-    <h1 class="h1 text-center pt-3 ww-title">Les demoiselles d'honneur</h2>
+    <h1 class="h1 text-center pt-3 pb-3 ww-title">Les demoiselles d'honneur</h2>
     <div class="row">
       <div class="col-md-2">
         <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-1.jpg" alt="Groom Men 1"/>
