Update groomsmen/bridesmaids section by removing social media links and adding consistent styling

--- a/index.html
+++ b/index.html
@@ -220,13 +220,12 @@
 <div class="ww-section bg-blue" id="people">
   <div class="container ww-couple-friends">
     <h1 class="h1 text-center pt-3 pb-3 ww-title">Nos témoins</h2>
-    <div class="row">
+    <div class="row principal">
       <div class="col-md-3">
         <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-1.jpg" alt="Groom Men 1"/>
           <div class="card-body text-center">
             <div class="h5">Charlotte Mager</div>
             <p class="text-muted">Témoin de la mariée</p>
-            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
           </div>
         </div>
       </div>
@@ -235,7 +234,6 @@
           <div class="card-body text-center">
             <div class="h5 text-center">Oriane Escobar</div>
             <p class="text-muted">Témoin de la mariée</p>
-            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
           </div>
         </div>
       </div>
@@ -244,7 +242,6 @@
           <div class="card-body text-center">
             <div class="h5 text-center">Jérémie Pardou</div>
             <p class="text-muted">Témoin du marié</p>
-            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
           </div>
         </div>
       </div>
@@ -253,19 +250,17 @@
           <div class="card-body text-center">
             <div class="h5 text-center">Guillaume Truilhé</div>
             <p class="text-muted">Témoin du marié</p>
-            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
           </div>
         </div>
       </div>
     </div>
     <h1 class="h1 text-center pt-3 pb-3 ww-title">Les demoiselles d'honneur</h2>
-    <div class="row">
+    <div class="row secondary">
       <div class="col-md-2">
         <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-1.jpg" alt="Groom Men 1"/>
           <div class="card-body text-center">
             <div class="h5">Pauline Millet-Peyrat</div>
             <p class="text-muted">Soeur de la mariée</p>
-            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
           </div>
         </div>
       </div>
@@ -274,7 +269,6 @@
           <div class="card-body text-center">
             <div class="h5 text-center">Emeline Aupy</div>
             <p class="text-muted">Soeur de la mariée</p>
-            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
           </div>
         </div>
       </div>
@@ -283,7 +277,6 @@
           <div class="card-body text-center">
             <div class="h5 text-center">Chloé Nunez</div>
             <p class="text-muted">Amie de la mariée</p>
-            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
           </div>
         </div>
       </div>
@@ -292,7 +285,6 @@
           <div class="card-body text-center">
             <div class="h5 text-center">Virginie Travisan</div>
             <p class="text-muted">Amie du marié</p>
-            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
           </div>
         </div>
       </div>
@@ -301,7 +293,6 @@
           <div class="card-body text-center">
             <div class="h5 text-center">Coralie Truilhé</div>
             <p class="text-muted">Amie du marié</p>
-            <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
           </div>
         </div>
       </div>
