--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <div class="h4">Cérémonie civile</div>
           <ul>
             <li><i class="text-muted fas fa-map-marker-alt"></i><a href="https://www.google.com/maps/place/City+Hall/@46.3238382,-0.4648161,15z/data=!4m5!3m4!1s0x0:0x3d25479ae0e8605a!8m2!3d46.3238382!4d-0.4648161" target="_blank"><span class="pl-2 text-muted">Mairie de Niort, 1 Place Martin Bastard, 79000 Niort, France</span></a></li>
-            <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">27 juillet 2019, 15h00</span></li>
+            <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">27 juillet 2019, début d'après-midi, heure à confirmer</span></li>
           </ul>
           <p>La cérémonie civile se déroulera à la mairie de Niort suivie d'une courte séance photo devant la mairie, les Halles et le Donjon de Niort.
           </p>
@@ -120,10 +120,10 @@
     <div class="row">
       <div class="col-md-7 col-sm-12">
         <div class="my-3">
-          <div class="h4">Cérémonie laïque</div>
+          <div class="h4">Cérémonie laïque, vin d'honneur et dîner</div>
           <ul>
             <li><i class="text-muted fas fa-map-marker-alt "></i><a href="https://www.google.com/maps/place/La+Gravette,+79360+Beauvoir-sur-Niort,+France/@46.2013597,-0.4874936,17z/data=!3m1!4b1!4m5!3m4!1s0x4800d2b6dc335333:0x338e629cf0bc74fc!8m2!3d46.2013597!4d-0.4852996" target="_blank"><span class="pl-2 text-muted">Domaine de la Gravette, 79360 Beauvoir-sur-Niort, France</span></a></li>
-            <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">27 juillet 2019, 17h00</span></li>
+            <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">27 juillet 2019, milieu d'après-midi, heure à confirmer</span></li>
           </ul>
           <p>Une cérémonie laïque se déroulera au domaine de La Gravette suivie du vin d'honneur, du dîner et de la soirée sur le dancefloor!
           </p>
@@ -222,15 +222,15 @@
     <h1 class="h1 text-center pt-3 pb-3 ww-title">Nos témoins</h2>
     <div class="row principal">
       <div class="col-md-3">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-1.jpg" alt="Groom Men 1"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/temoin_charlotte_crop.jpg" alt="Groom Men 1"/>
           <div class="card-body text-center">
-            <div class="h5">Charlotte Mager</div>
+            <div class="h5">Charlotte Fieno</div>
             <p class="text-muted">Témoin de la mariée</p>
           </div>
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-2.jpg" alt="Groom Men 2"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/temoin_oriane_crop.jpg" alt="Groom Men 2"/>
           <div class="card-body text-center">
             <div class="h5 text-center">Oriane Escobar</div>
             <p class="text-muted">Témoin de la mariée</p>
@@ -238,7 +238,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-1.jpg" alt="Groom Men 3"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/temoin_jeremie_crop.jpg" alt="Groom Men 3"/>
           <div class="card-body text-center">
             <div class="h5 text-center">Jérémie Pardou</div>
             <p class="text-muted">Témoin du marié</p>
@@ -246,7 +246,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-2.jpg" alt="Groom Men 3"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/temoin_guitou_crop.jpg" alt="Groom Men 3"/>
           <div class="card-body text-center">
             <div class="h5 text-center">Guillaume Truilhé</div>
             <p class="text-muted">Témoin du marié</p>
@@ -257,7 +257,7 @@
     <h1 class="h1 text-center pt-3 pb-3 ww-title">Les demoiselles d'honneur</h2>
     <div class="row secondary">
       <div class="col-md-2">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-1.jpg" alt="Groom Men 1"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_pauline_crop.jpg" alt="Groom Men 1"/>
           <div class="card-body text-center">
             <div class="h5">Pauline Millet-Peyrat</div>
             <p class="text-muted">Soeur de la mariée</p>
@@ -265,7 +265,7 @@
         </div>
       </div>
       <div class="col-md-2">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-2.jpg" alt="Groom Men 2"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_emeline_crop.jpg" alt="Groom Men 2"/>
           <div class="card-body text-center">
             <div class="h5 text-center">Emeline Aupy</div>
             <p class="text-muted">Soeur de la mariée</p>
@@ -273,7 +273,7 @@
         </div>
       </div>
       <div class="col-md-2">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-3.jpg" alt="Groom Men 3"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_chloe_crop.jpg" alt="Groom Men 3"/>
           <div class="card-body text-center">
             <div class="h5 text-center">Chloé Nunez</div>
             <p class="text-muted">Amie de la mariée</p>
@@ -281,7 +281,7 @@
         </div>
       </div>
       <div class="col-md-2">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-2.jpg" alt="Groom Men 3"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_virginie_crop.jpg" alt="Groom Men 3"/>
           <div class="card-body text-center">
             <div class="h5 text-center">Virginie Travisan</div>
             <p class="text-muted">Amie du marié</p>
@@ -289,10 +289,18 @@
         </div>
       </div>
       <div class="col-md-2">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-1.jpg" alt="Groom Men 3"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_coco_crop.jpg" alt="Groom Men 3"/>
           <div class="card-body text-center">
             <div class="h5 text-center">Coralie Truilhé</div>
             <p class="text-muted">Amie du marié</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_alice_crop.jpg" alt="Groom Men 3"/>
+          <div class="card-body text-center">
+            <div class="h5 text-center">Alice Garrigues</div>
+            <p class="text-muted">Fille des mariés</p>
           </div>
         </div>
       </div>
@@ -408,56 +416,43 @@
               <h3><a href="https://www.larochelle-tourisme.com/">La Rochelle</a></h3>
               <img class="featured" src="images/tourisme_la_rochelle.jpg"/>
               <span class="distance">(voiture: 50 min de Niort)</span>
-              <p class="first-line-description">Ma ville! Á ne pas manquer!</p>
+              <p class="first-line-description">La ville de naissance d'Aurélie, le port avec ses deux tours reste incontournables et ces petites rues marchandes sont pleines de charme. Passez-y au moins un après-midi à flâner dans les rues. Faites un détour par le meilleur glacier de tous les temps, <a href="https://www.ernest-le-glacier.com/">Ernest le glacier</a> !</p>
             </div>  
             <div class="col-md-3 visit-place">
               <h3><a href="https://www.iledere.com/pratique">Île de Ré</a></h3>
               <img class="featured" src="images/tourisme_ile_de_re.jpg"/>
               <span class="distance">(voiture: 1h10 de Niort)</span>
-              <p class="first-line-description">Balades
-              Vélo
-              Nature
-              Plage
-              Marchés
-              </p>
+              <p class="first-line-description">Si vous avez prévu de passer quelques jours dans la région, passez une nuit ou deux dans l'Île de Ré peut vous dépayser. Avec ses plages, ses petits villages, ses marchés bucoliques et les balades à vélo légendaires, l'Île de Ré est une destination unique pour passer un bon moment entre amis ou en famille.</p>
             </div>
             <div class="col-md-3 visit-place">
               <h3><a href="https://www.puydufou.com">Puy du Fou</a></h3>
               <img class="featured" src="images/tourisme_puy_du_fou.jpg"/>
               <span class="distance">(voiture: 1h20 de Niort)</span>
-              <p class="first-line-description">Parc d'attraction, spectacles
-              À ne pas manquer!
-              </p>
+              <p class="first-line-description">Élu meilleur parc du monde, le Puy du Fou est à ne pas manquer. Faites le détour pour y passer un ou deux jours et pourquoi pas rester dans leurs hôtels exceptionnels. La Cinéscénie du soir peut être prise en même temps que le parc, mais il faut réserver longtemps à l'avance; c'est un des plus beaux spectacles que vous verrez dans votre vie, inoubliable !</p>
             </div>
             <div class="col-md-3 visit-place">
               <h3><a href="https://futuroscope.com/">Futuroscope</a></h3>
               <img class="featured" src="images/tourisme_futuroscope.jpg"/>
               <span class="distance">(voiture: 1h de Niort)</span>
-              <p class="first-line-description">Parc d'attraction
-                À ne pas manquer!
-              </p>
+              <p class="first-line-description">Des attractions à couper le souffle, un parc agréable pour les petits et grands, le Futuroscope est unique en son genre. Le parc se renouvelle sans cesse pour impressionner les visiteurs avec les dernières technologies. Il vaut le détour ! N'oubliez pas de rester le soir pour le spectacle de son et lumière (inclus dans le prix du billet).</p>
             </div>
             <div class="col-md-3 visit-place">
               <h3><a href="https://www.marais-poitevin.com/">Le marais poitevin</a></h3>
               <img class="featured" src="images/tourisme_marais_poitevin.jpg"/>
               <span class="distance">(voiture: 1h de Niort)</span>
-              <p class="first-line-description">Balades en barques
-              Vélo
-              Nature
-              Randonnées
-            </p>
+              <p class="first-line-description">Pour passer un moment agréable entre amis ou en famille, loin des villes, le marais poitevin est un endroit idéal. Prenez une excursion en canoë, allez vous baigner dans un lac, ou faites des balades à vélo ou encore des visites de châteaux médiévaux. Il y en a pour tous les goûts !</p>
             </div>
             <div class="col-md-3 visit-place">
               <h3><a href="http://poitiers-tourism.com/">Poitiers</a></h3>
               <img class="featured" src="images/tourisme_poitiers.jpg"/>
               <span class="distance">(voiture:1h de Niort)</span>
-              <p class="first-line-description">Ville Romane</p>
+              <p class="first-line-description">Pour les amoureux de la ville, vous pouvez faire une halte au centre historique de Poitiers, le chef lieu de la région Poitou-Charentes. Séjournez dans cette ville et découvrez les produits régionaux, comme les terrines et pâtés ou encore les bières locales.</p>
             </div>
-            <div class="col-md-3 visit-place">  
+            <div class="col-md-3 visit-place">
               <h3><a href="http://www.zoo-palmyre.fr/">Zoo de la Palmyre</a></h3>
               <img class="featured" src="images/tourisme_zoo_palmyre.jpg"/>
               <span class="distance">(voiture: 1h30 min de Niort)</span>
-              <p class="first-line-description">Zoo - y passer la journée</p>
+              <p class="first-line-description">Pour passer une journée insolite en famille, allez visiter le Zoo de la Palmyre. Ne manquez pas le spectacle des otaries ainsi que les perroquets en trottinette. Vous ne verrez pas ça deux fois dans votre vie !</p>
             </div>
           </div>
         </div>
